--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+test_exception_branch.csv
+test_exception_bus.csv
+test_exception_gen.csv
+test_out.glm
+test_out.json
+test.glm
