--- a/.gitignore
+++ b/.gitignore
@@ -158,9 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-test_exception_branch.csv
-test_exception_bus.csv
-test_exception_gen.csv
-test_out.glm
-test_out.json
-test.glm
+*_exception_branch.csv
+*_exception_bus.csv
+*_exception_gen.csv
+*_out.glm
+*_out.json
